# document_parser

./: app.py  extractor.py  pyproject.toml  utils.py
app/: extractor.py  main.py  utils.py
