[tool.poetry]
name = "devcon_hackathon_2022"
version = "0.1.0"
description = ""
authors = ["Redza Rosli <redza.rosli@cognite.com>"]

[tool.poetry.dependencies]
python = ">3.9.7,<4.0"
openai = ">=0.27,<0.28"
pdfplumber = "^0.7.6"
pytesseract = "^0.3.10"
numpy = "^1.24.1"
matplotlib = "^3.7.1"
Flask = "^2.2.3"
openpyxl = "^3.1.2"
langchain = "^0.0.146"
kor = "^0.8.1"
markdownify = "^0.11.6"
selenium = "^4.9.0"
unstructured = "^0.6.1"
tiktoken = "^0.3.3"
python-dotenv = "^1.0.0"
msal = "^1.22.0"
cognite-sdk = "4.1.1"
streamlit = "^1.22.0"
pandas = "<2.0.1"
ipykernel = "^6.22.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
